# file-system-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py  mcp_server.py  models.py  security.py  security_middleware.py  server.py
app/adapters/: __init__.py  ast_grep.py  diffing.py  docker_exec.py  filesystem.py  git.py  host_inspect.py  repo_map.py  rg.py  run_command.py
app/tools/: __init__.py  apply_patch.py  ast_grep_search.py  copy_file.py  delete_dir.py  delete_file.py  docker_exec.py  get_repo_map.py  git_command.py  host_inspect.py  list_dir.py  move_file.py  propose_patch.py  read_file.py  read_files.py  ripgrep_search.py  run_command.py  write_file.py
scripts/: run_local.sh
tests/: __init__.py  test_ast_grep.py  test_diffing.py  test_list_dir.py  test_mcp_tools.py  test_paths.py  test_read_file.py  test_read_files.py  test_repo_map.py  test_rg.py  test_run_command.py  test_write_file.py
